Alteração de texto nos Depoimentos

--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
                     <img src="./img/avatar1.png" alt="AVATAR1">
                 </div>
                 <div class="testimonial__info">
-                    <h5>Laryssa Carvalho</h5>
-                    <small>Mozão</small>
+                    <h5>Lorem, ipsum.</h5>
+                    <small>Lorem ipsum dolor sit amet.</small>
                 </div>
                 <div class="testimonial__body">
                     <p>
@@ -358,8 +358,8 @@
                     <img src="./img/avatar2.png" alt="AVATAR2">
                 </div>
                 <div class="testimonial__info">
-                    <h5>Theo Carvalho Cordeiro</h5>
-                    <small>Cuthéo</small>
+                    <h5>Lorem, ipsum dolor.</h5>
+                    <small>Lorem.</small>
                 </div>
                 <div class="testimonial__body">
                     <p>
@@ -373,8 +373,8 @@
                     <img src="./img/avatar3.png" alt="AVATAR3">
                 </div>
                 <div class="testimonial__info">
-                    <h5>Laryssa Carvalho</h5>
-                    <small>Mozão</small>
+                    <h5>Lorem, ipsum dolor.</h5>
+                    <small>Lorem, ipsum.</small>
                 </div>
                 <div class="testimonial__body">
                     <p>
@@ -388,8 +388,8 @@
                     <img src="./img/avatar4.png" alt="AVATAR4">
                 </div>
                 <div class="testimonial__info">
-                    <h5>Laryssa Carvalho</h5>
-                    <small>Mozão</small>
+                    <h5>Lorem ipsum dolor sit.</h5>
+                    <small>Lorem, ipsum dolor.</small>
                 </div>
                 <div class="testimonial__body">
                     <p>
@@ -403,8 +403,8 @@
                     <img src="./img/avatar5.png" alt="AVATAR5">
                 </div>
                 <div class="testimonial__info">
-                    <h5>Laryssa Carvalho</h5>
-                    <small>Mozão</small>
+                    <h5>Lorem ipsum dolor sit amet.</h5>
+                    <small>Lorem, ipsum.</small>
                 </div>
                 <div class="testimonial__body">
                     <p>
