alteração no footer

--- a/pages/about.html
+++ b/pages/about.html
@@ -152,7 +152,7 @@
         </div>
 
         <div class="footer__copyright">
-            <small>Copyright &copy; Raphael da Silva</small>
+            <small>Copyright &copy; Raphael da Silva 2022</small>
         </div>
 
     </footer>
