--- a/pages/contact.html
+++ b/pages/contact.html
@@ -107,7 +107,7 @@
         </div>
 
         <div class="footer__copyright">
-            <small>Copyright &copy; Raphael da Silva</small>
+            <small>Copyright &copy; Raphael da Silva 2022</small>
         </div>
 
     </footer>
