alteração de posicionamento de links no footer

--- a/pages/about.html
+++ b/pages/about.html
@@ -116,10 +116,19 @@
         <div class="container footer__container">
 
             <div class="footer__1">
-                <a href="../index.html" class="footer__logo"><img src="../img/rs_design_LOGO.svg" alt="Logo"></a>
+                <a href="./index.html" class="footer__logo"><img src="./img/rs_design_LOGO.svg" alt="Logo"></a>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium, corrupti.
                 </p>
+                <ul class="footer__socials">
+                    <li>
+                        <a href="https://www.linkedin.com/in/oraphaeldasilva/" target="_blank"><i class="uil uil-linkedin"></i>Linked<strong>in</strong></a>
+                    </li>
+
+                    <li>
+                        <a href="https://github.com/silvasaauruss" target="_blank"><i class="uil uil-github"></i></i>Github</a>
+                    </li>
+                </ul>
             </div>
 
             <div class="footer__2">
@@ -138,15 +147,6 @@
                         <p><i class="uil uil-whatsapp"></i>(47) 99620-4222</p>
                         <p><i class="uil uil-envelope"></i>raphael.mec19@gmail.com</p>
                     </div>
-                <ul class="footer__socials">
-                    <li>
-                        <a href="https://www.linkedin.com/in/oraphaeldasilva/" target="_blank"><i class="uil uil-linkedin"></i>Linked<strong>in</strong></a>
-                    </li>
-
-                    <li>
-                        <a href="https://github.com/silvasaauruss" target="_blank"><i class="uil uil-github"></i></i>Github</a>
-                    </li>
-                </ul>
             </div>
 
         </div>
