--- a/pages/project.html
+++ b/pages/project.html
@@ -210,7 +210,7 @@
         <div class="container footer__container">
 
             <div class="footer__1">
-                <a href="./index.html" class="footer__logo"><img src="./img/rs_design_LOGO.svg" alt="Logo"></a>
+                <a href="./index.html" class="footer__logo"><img src="../img/rs_design_LOGO.svg" alt="Logo"></a>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium, corrupti.
                 </p>
