alterações na paleta de cores

--- a/pages/about.html
+++ b/pages/about.html
@@ -62,55 +62,9 @@
     </nav>
     <!-- ============ END OF NAVBAR ============ -->
 
-
-
-
-
-    <section class="about__achievements">
-
-        <div class="container about__achievements-container">
-
-            <div class="about__achievements-left">
-                <img src="" alt="IMAGEM_Conquistas">
-            </div>
-
-            <div class="about__achievements-right">
-                <h1>Conquistas</h1>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, molestias! Vero aut distinctio necessitatibus repellat perspiciatis hic? Saepe, unde ducimus tempore alias est voluptas nulla corrupti aperiam repudiandae nobis mollitia aliquid recusandae neque, maxime numquam voluptatibus vel ipsum perferendis adipisci ab sunt laborum rerum facere? Nobis inventore eum neque nihil.
-                </p>
-                <div class="achievements__cards">
-
-                    <article class="achievement__card">
-                        <span class="achievement__icon"><i class="uil uil-desktop"></i>
-                        </span>
-                        <h3>10+</h3>
-                        <p>Projetos</p>
-                    </article>
-
-                    <article class="achievement__card">
-                        <span class="achievement__icon"><i class="uil uil-desktop"></i>
-                        </span>
-                        <h3>10+</h3>
-                        <p>Projetos</p>
-                    </article>
-
-                    <article class="achievement__card">
-                        <span class="achievement__icon"><i class="uil uil-desktop"></i>
-                        </span>
-                        <h3>10+</h3>
-                        <p>Projetos</p>
-                    </article>
-                    
-                    
-                </div>
-
-            </div>
-
-        </div>
-
-    </section>
-
+    <h3>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non consequuntur eos quos quaerat beatae quis iste illo consectetur, nesciunt delectus cumque veniam officiis mollitia maiores quae unde vel officia aperiam vitae doloribus impedit. Velit aut, enim nam earum nulla voluptates voluptatem maxime officia alias quam dolor ut adipisci, labore corrupti aperiam! Vero, voluptatibus! Suscipit assumenda non ad officiis error eaque recusandae quisquam rerum itaque numquam reprehenderit quidem, pariatur quibusdam delectus veniam reiciendis sapiente officia fugiat ipsum eius in necessitatibus laborum temporibus sequi. Cum accusamus itaque cupiditate? Molestiae quod molestias fugiat quos impedit praesentium neque temporibus veniam libero, sint, vero iusto officia asperiores ducimus? Labore nostrum reprehenderit, magni nulla dolor ullam eius maxime temporibus? Reprehenderit adipisci quis obcaecati natus deleniti accusantium consequatur pariatur voluptatibus qui sequi! Aspernatur labore velit ducimus non dolorem eius ipsam, similique delectus dolores provident autem commodi aliquid quasi nisi officiis tempore hic sapiente minima beatae ratione nostrum in tempora nulla recusandae? Iste voluptatibus, qui molestiae fuga saepe, neque asperiores odio corrupti voluptate labore corporis ullam nulla deleniti dolor modi ea blanditiis? Voluptates quas dolores exercitationem officia in quae nisi nostrum repudiandae veritatis eaque nulla vel sequi praesentium deleniti eveniet nam sint a dicta recusandae expedita, molestiae provident alias minus! Quis ex id, fugiat quia quo iusto enim, qui, quam mollitia aliquam recusandae molestiae in reiciendis itaque dolore. Soluta labore, voluptatibus fugiat tenetur repellat iure blanditiis pariatur laudantium dicta aspernatur accusantium, rem debitis laboriosam, earum laborum molestias accusamus et perspiciatis similique hic. Doloribus mollitia ipsam facilis magni labore nemo provident architecto excepturi fuga blanditiis dignissimos accusantium ex quasi deleniti veritatis expedita obcaecati, amet, nam aperiam aut aliquam! Quaerat beatae ipsa veritatis, repellat vel dolores sit unde quae officiis consequuntur totam nam earum enim! Voluptates earum facere animi commodi labore alias voluptate rem ut. Corporis reprehenderit dolore eius? Mollitia nam consequatur cumque corrupti animi commodi quisquam provident sunt hic iusto, quas laboriosam dolores numquam magni voluptas. Porro nam asperiores accusantium minima eaque aut voluptate dolor dolorem beatae maiores quia adipisci, fugiat aliquid. Cum atque rerum qui dolor officia labore. Culpa quia veritatis repellendus inventore omnis, mollitia non ipsum in unde itaque fugiat laudantium, odit maiores modi eveniet officiis, laboriosam pariatur facilis repellat quaerat sunt? Ut perferendis ratione aliquam eaque praesentium sit ab, sunt itaque eius consequatur facilis minus, eos reprehenderit aperiam ducimus inventore vero! Quasi fugiat asperiores alias molestiae, est dolor dolorum provident harum in laboriosam iure, totam quidem maiores odio! Quam ducimus similique aliquam necessitatibus numquam explicabo odio adipisci ratione ea assumenda vitae a illo deleniti voluptatem nostrum, quia eius nisi consequatur iusto autem at, dolorum earum et facere. Libero molestiae officiis odio in dicta. Dolores sequi esse impedit, pariatur consequatur commodi ab, doloribus possimus cum autem architecto quas, doloremque eveniet eaque beatae quo quidem suscipit ipsa! Obcaecati quisquam provident omnis ex? Vel omnis sequi ab rem, dolor libero nesciunt fuga? Vitae laboriosam corporis enim accusamus illum optio similique quisquam. Temporibus aliquid voluptatem sequi iste minima, at itaque, fugiat vel in vero ducimus illum debitis. Libero eos nihil numquam, quisquam doloribus doloremque fugit. Quidem doloribus vitae libero distinctio consequuntur. Velit corporis dolor necessitatibus amet ipsam repellendus earum non mollitia sunt? Corporis maiores, delectus, explicabo, pariatur quibusdam beatae exercitationem ad provident tenetur voluptatibus et incidunt quas facilis nulla similique est? Autem dolorum officiis doloremque, aperiam ipsum quam laudantium praesentium ad rerum facilis repellendus, animi debitis adipisci minus asperiores eaque vero ipsa eveniet excepturi amet laborum iure odio in? Ut similique, quis nemo eaque nobis explicabo totam dignissimos amet repudiandae velit repellendus obcaecati! Eaque, magnam eius? Placeat accusamus impedit et magnam quasi hic rem sint perspiciatis debitis eaque voluptates, fugiat vitae nesciunt beatae laboriosam itaque, esse accusantium veritatis officiis veniam aspernatur iste! Et quod dolorum, corrupti fuga aut assumenda, tenetur excepturi, suscipit quas dolorem omnis possimus minus quibusdam! Provident saepe officia placeat! Sequi nesciunt explicabo quo nulla fuga unde numquam veritatis ab voluptate deserunt, eius distinctio dolorem officiis similique magni excepturi. Reiciendis eligendi culpa temporibus iusto placeat! Sint culpa minima molestiae esse, laborum explicabo assumenda voluptatum! Aliquam molestiae iusto a error voluptatem ad culpa fugiat doloribus magnam, neque quae rem veniam, debitis dolore, voluptates adipisci porro dolorem eligendi alias! Natus, assumenda nobis sapiente incidunt sit consequatur labore provident similique officiis, quisquam est temporibus excepturi! Dolorem ipsam, impedit sed iusto nulla ab laborum similique, eligendi labore quas cumque numquam autem odit, sapiente libero atque tempora sunt placeat dolores ipsum tempore fuga commodi molestiae illum. Iusto, quia expedita quisquam pariatur repellendus saepe cupiditate aliquam commodi laudantium laboriosam delectus quibusdam doloribus obcaecati, sapiente sint rem autem accusamus explicabo tempora hic alias cum voluptates culpa itaque! Voluptatem ratione vel obcaecati amet necessitatibus maiores? Iste numquam dicta, quibusdam deleniti quia nisi cum dolores odio consequatur incidunt ullam eum, voluptatum ad blanditiis nihil voluptatibus distinctio animi delectus velit officia suscipit ex! Qui a praesentium fuga ipsam minima repellendus corporis assumenda quam error sunt, nulla magnam eaque rem, est alias deserunt harum expedita nemo amet asperiores. Iste exercitationem facere ullam culpa amet deleniti similique molestiae reprehenderit perferendis quod, fuga dolores, vitae quisquam commodi consequuntur minus. Vitae harum nulla ratione impedit atque consectetur ullam quidem, assumenda rerum est magni ex quasi molestias nesciunt perferendis debitis eum quisquam. Veniam, dolor ex. Accusamus, assumenda laudantium voluptate delectus provident sed modi officia blanditiis, dolore ipsum sapiente explicabo quod, iste pariatur in earum tempora asperiores architecto sequi doloribus excepturi ipsa aliquam possimus! Autem quae aspernatur similique dolores asperiores id ex, quis ab ipsa odio error corrupti iusto tempore? Sint quia quaerat nihil aperiam, at quos qui, a ratione temporibus laborum, earum velit? Consectetur veritatis unde expedita quidem, ipsum cupiditate itaque, laboriosam similique quisquam maiores quasi labore aperiam dolores, distinctio et odit reiciendis nam. Sunt cumque minus iste, numquam accusamus a fugiat ipsam, temporibus nulla earum officia nesciunt porro necessitatibus sit eaque, quam distinctio quibusdam corporis illo laborum omnis? Nam, voluptatum earum? Mollitia rerum est saepe, nisi aliquid tempora minima reiciendis, alias tenetur labore magnam amet dolor commodi rem optio iste voluptate maxime iure nulla assumenda error sapiente beatae distinctio! Ratione, libero.
+    </h3>
 
     <footer>
         <div class="container footer__container">
