--- a/pages/project.html
+++ b/pages/project.html
@@ -182,7 +182,7 @@
 
                 <div class="project__image">
 
-                    <img src="../img/Maratona_eficiencia/carro_eletrico1.jpg" alt="Carro elétrico">
+                    <img src="../img/Maratona_eficiencia/carro_eletrico1.webp" alt="Carro elétrico">
 
                 </div>
 
